# whisperX

./: MANIFEST.in  pyproject.toml
src/whisperx/: __init__.py  alignment.py  asr.py  vad.py
