[project]
name = "whisperx"
version = "0.1.0"
description = "Castuner's fork of WhisperX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.0",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pyannote-audio>=3.3.2",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "transformers>=4.47.0",
]


[project.scripts]
whisperx = "whisperx.transcribe:cli"

[tool.uv]

package = true
